# wise-extension

./: .env.example  .gitignore  README.md  build.sh  dev.sh  docker-compose.yml  setup.sh
backend/: main.py  pyproject.toml
db/: .gitkeep
docker/: backend.Dockerfile  extension.Dockerfile
frontend/extension/: manifest.json  package.json  vite.config.js
frontend/extension/public/: manifest.json
frontend/extension/src/: App.jsx
